--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "jquery.animate-number": "^0.0.14",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-owl-carousel": "^2.3.3",
     "react-scripts": "^5.0.1",
     "swiper": "^11.1.5",
+    "waypoints": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
