--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "swiper": "^11.1.5",
     "waypoints": "^4.0.1",
